<resources>
    <string name="app_name">BobLive</string>

    <string name="app_name1">BOBLIVE</string>
    <string name="mini_tag">MINI</string>
    <string name="basic_tag">BASIC</string>
    <string name="premium_tag">PREMIUM</string>
    <string name="voucher_tag">VOUCHER</string>
    <string name="adult_tag">ADULT</string>
    <string name="film_tag">FILMY</string>
    <string name="mini">MINI</string>
    <string name="basic">BASIC</string>
    <string name="premium">PREMIUM</string>
    <string name="tv">TV</string>
    <string name="adult">ADULT</string>
    <string name="film">FILMY</string>
    <string name="language">Choose Language:</string>
    <string name="wifi">Choose Wifi:</string>
    <string name="notice">Notice</string>
    <string name="confirm">Confirm</string>
    <string name="voucher">Activate by voucher</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ad">Advertisement</string>
    <string name="search">search</string>
    <string name="detail">Detail</string>
    <string name="pass">Pass</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="create_account">Create an account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password_different">password different</string>
    <string name="username_empty">username input empty</string>
    <string name="password_empty">password input empty</string>
    <string name="email_empty">email input empty</string>
    <string name="register_fail">Register fail , please try again</string>
    <string name="login_fail">Login fail , please check user information and try again</string>
    <string name="network_error">Network connect error , please check </string>
    <string name="copyright">All resources are from internet, for educational purpose only</string>
    <string name="live">Live</string>
    <string name="confirm_exit">Do you confirm exit?</string>
    <string name="data_loading">Loading...</string>
    <string name="data_load_error">data load error, please try again later</string>
    <string name="retry">Retry</string>
    <string name="back">Press back exit</string>
    <string name="update_notice">Update Notice</string>
    <string name="login_notice">"You have no login , press 'Confirm' continue to login"</string>
    <string name="active_key">"Type in active Key"</string>
    <string name="active_success">"Active success"</string>
    <string name="type_in_password">"Type in password"</string>
    <string name="error_server">"Server error , please try again later"</string>
    <string name="error_key_format">"Active key format error"</string>
    <string name="no_network">"Network invalidate, please check network first"</string>
    <string name="authorization_error">"Authorization key error, press 'confirm' type int another key, please contact customer service if it is not work"</string>
    <string name="set_wifi">"Have no network connection, set wifi now?"</string>
    <string name="error_msg1">can not play</string>
    <string name="error_msg2">show error information</string>
    <string name="error_msg3">the video play fluently</string>
    <string name="send">Send</string>
    <string name="notice_protect">Parental control:\nTo setup,please type in your password and confirm. If not required, please press cancel</string>
    <string name="password_format_error">password format error</string>
    <string name="password_setting_success">password setting successfully</string>
    <string name="parent_control_disabled">Parental Control disabled</string>
    <string name="password_incorrect">password incorrect</string>
    <string name="n1">BobLive je úplne legálny a obsahuje len odkazy na iné dostupné weby na internete (Youtube, ZStream, Dizimag, TheVideo, atď.). Neukladá ani nenahráva žiadne videá, filmy alebo mediálne súbory. BobLive jednoducho zhromažďuje odkazy v pohodlnom, užívateľsky prívetivom rozhraní. Spoločnosť BobLive nezodpovedá za presnosť, dodržiavanie, autorské práva, zákonnosť, slušnosť alebo akýkoľvek iný aspekt obsahu iných prepojených stránok. Ak máte akékoľvek právne problémy, obráťte sa prosím na príslušných vlastníkov multimediálnych súborov alebo hostiteľské stránky. Všetky právne otázky týkajúce sa bezplatných televíznych relácií a filmov v tejto aplikácii by mali byť prevzaté zo strany samotných hostiteľov a poskytovateľov súborov, keďže s nimi nie sme spojení.
V prípade porušenia autorských práv priamo kontaktujte zodpovedné osoby. BobLive funguje ako vyhľadávač filmových a televíznych relácií, ktoré sa verejne nachádzajú na internete a ktoré sa v zásade riadia samé ako Google. BobLive verí v ochranu duševného vlastníctva a je ochotný pomôcť, ak je to možné. BobLive nepreberá zodpovednosť za obsah na hosťovaných webových stránkach tretích strán, ani sám nenahráva videá ani nepomáha ostatným, aby tak urobili. Videá sú streamované priamo z vyššie uvedených služieb zdieľaním videa tretích strán. Všetky ostatné ochranné známky, logá a obrázky sú vlastníctvom ich príslušných a oprávnených vlastníkov.
Použite BobLive na vlastné nebezpečenstvo.</string>
    <string name="agree">Agree</string>
    <string name="reject">Reject</string>
    <string name="agreement">Agreement</string>
    <string name="ok">OK</string>
    <string name="notice_reset">type in activate code</string>
    <string name="notice_reset_error">Activate code error</string>

    <string name="please_choose_plan">Please choose your plan</string>
    <string name="choose_plan">CHOOSE PLAN</string>
    <string name="plan11"><![CDATA[11 days -> 100 CZK]]></string>
    <string name="plan22"><![CDATA[22 days -> 200 CZK]]></string>
    <string name="plan33"><![CDATA[33 days -> 300 CZK]]></string>
    <string name="plan66"><![CDATA[66 days -> 600 CZK]]></string>
    <string name="plan111"><![CDATA[111 days -> 1000 CZK]]></string>
    <string name="type_in_voucher_id">type in voucher id</string>
    <string name="activate">Activate</string>

    <string name="voucher_input_error">voucher id input error</string>
    <string name="plan_choose_error">plan choose error</string>
    <string name="out_expires">Your voucher time will be out expires soon, please activate</string>
</resources>
