<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:layout_width="500dp"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/notice"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_marginTop="5dp"
        android:text="@string/update_notice"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btConfirm"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@drawable/text_login"
        android:textAllCaps="false"
        android:background="@drawable/bg_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
