<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etAuthorization"
        android:hint="@string/active_key"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="22sp"
        android:background="@android:color/black"
        android:textColor="@color/colorWhite"
        android:layout_width="400dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btConfirm"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:textColor="@drawable/text_login"
        android:textAllCaps="false"
        android:background="@drawable/bg_confirm"
        android:layout_width="100dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btVoucher"
        android:text="@string/voucher"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:textColor="@drawable/text_login"
        android:textAllCaps="false"
        android:background="@drawable/bg_confirm"
        android:layout_width="200dp"
        android:layout_height="50dp" />
</LinearLayout>
